--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <header class="header">
             <h1>SOFTWARE ENGINEER GAME</h1>
         </header>
-        <div class="border-body">
+        <div class="border-body2">
             <main class="flex-box">
                 <h1 class="content-box">Descubra Seu Nível em Engenharia de Software </h1>
-                <a href="game.html" class="link-game">Jogar ▶</a>
+                <a href="game.php" class="link-game">Jogar ▶</a>
             </main>
         </div>
         <footer>
